# robotics-engine

./: .gitignore  CMakeLists.txt  README.md
apps/: rex_perf_main.cpp  rex_viewer_main.cpp
docs/architecture/: module-graph.md
docs/research/: world-model-interface.md
include/rex/collision/: contact.hpp
include/rex/dynamics/: world.hpp
include/rex/geometry/: shapes.hpp
include/rex/gpu/: backend.hpp
include/rex/kinematics/: articulation.hpp
include/rex/math/: types.hpp
include/rex/platform/: handles.hpp  profile.hpp
include/rex/sim/: engine.hpp
include/rex/solver/: solver.hpp
include/rex/viewer/: controller.hpp  demo.hpp  replay.hpp  svg_renderer.hpp  window_app.hpp
python/: rex_data.py  rex_research.py
src/collision/: contact.cpp
src/dynamics/: world.cpp
src/geometry/: shapes.cpp
src/gpu/: backend.cu
src/kinematics/: articulation.cpp
src/math/: types.cpp
src/platform/: handles.cpp
src/python/: module.cpp
src/sim/: engine.cpp
src/solver/: solver.cpp
src/viewer/: controller.cpp  demo.cpp  replay.cpp  svg_renderer.cpp  window_app.cpp
tests/: core_test.cpp  python_api_test.py  python_data_test.py  python_property_test.py  python_research_test.py  smoke_test.cpp  viewer_test.cpp
